--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
+    "react-uuid": "^1.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
